--- a/family.html
+++ b/family.html
@@ -28,7 +28,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "A boy and two girls posing in front of a stone sign for Ben Reifel Visitor Center, Badlands National Park. A sign for the National Park Service is on the left side of the monument.">
 			<img src = "images/falling.jpg" width="25" alt = "A boy hanging onto a stone ledge with one hand, his other arm outstretched in the air.">
 			<img src = "images/rushmore.jpg" width="1000" alt = "A picture of Mount Rushmore from afar.">
-			<img src = "images/jewel_cave.jpg" width="25" alt = "A boy and two girls posing in front of an engraved sign for Jewel Cave National Monument. Below it, there is smaller text which reads “Visitor Center/Cave Tours”. The top left corner of the sign reads, “National Park Service, U.S. Department of the Interior”.">
+			<img src = "images/jewel_cave.JPG" width="25" alt = "A boy and two girls posing in front of an engraved sign for Jewel Cave National Monument. Below it, there is smaller text which reads “Visitor Center/Cave Tours”. The top left corner of the sign reads, “National Park Service, U.S. Department of the Interior”.">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 	Colleen van Lent &copy; 2023
