--- a/family.html
+++ b/family.html
@@ -31,7 +31,9 @@
 			<img src = "images/jewel_cave.JPG" width="25" alt = "A boy and two girls posing in front of an engraved sign for Jewel Cave National Monument. Below it, there is smaller text which reads “Visitor Center/Cave Tours”. The top left corner of the sign reads, “National Park Service, U.S. Department of the Interior”.">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
+	<footer>
 	Colleen van Lent &copy; 2023
+</footer>
 </body>
 </html>
 
