--- a/family.html
+++ b/family.html
@@ -15,7 +15,7 @@
 			<li class="active"><a href = "index.html">About Me</a> </li>
 			<li> <a href = "family.html">My Family </a>
 			<li> <a href = "random.html">Random Stuff </a> </li>
-			<li> <a href = "si.umich.edu">UMSI</a> </li>
+			<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 		</ul>
 	</nav>
 		<h1>Family</h1>
@@ -32,7 +32,7 @@
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
 	<footer>
-	Colleen van Lent &copy; 2023
+	<p>Colleen van Lent &copy; 2023</p>
 </footer>
 </body>
 </html>
